# engine-wrapper

./: CMakeLists.txt  README.md  main.cpp
include/: engine-wrapper.hpp
include/src/: agent.hpp  arrayslice.hpp  battle.hpp  generation.hpp  pokemon.hpp  team.hpp
include/src/gen1/: base_stats.hpp  battle_rby.hpp  move.hpp  pokemon_rby.hpp  side_rby.hpp  species.hpp  team_rby.hpp  types.hpp
include/src/gen1/samples/: battlesample.hpp  pokesample.hpp  sidesample.hpp  teamsample.hpp
src/: agent.hpp  battle.hpp  meta_header.hpp  pokemon.hpp  team.hpp
src/gen1/: base_stats.hpp  battleRBY.hpp  battle_rby.hpp  move.hpp  pokemonRBY.hpp  pokemon_rby.hpp  species.hpp  teamRBY.hpp  team_rby.hpp  types.hpp
src/gen1/samples/: battlesample.hpp  pokesample.hpp  teamsample.hpp
